terraform-files/security.tf
resource "aws_security_group" "rental-secgrp" {
  name        = "rental-secgrp"
  description = "Allow TLS inbound traffic"
  vpc_id = data.aws_vpc.default.id

  ingress {
    description = "allow port 22"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "allow port 80"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    security_groups = [ aws_security_group.alb-secgrp.id ]
  }
  
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "flask-secgrp"
  }
}

resource "aws_security_group" "alb-secgrp" {
  name        = "alb-secgrp"
  description = "Allow TLS inbound traffic"
  vpc_id = data.aws_vpc.default.id
  
  ingress {
    description = "allow port 80"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "alb-secgrp"
  }
}
